@@ -81,7 +81,8 @@ map-space=Warp engine malfunction
 map-void=Nice time to relax
 placed-error-surface=This entity can not be placed on this surface
 map-home=Welcome home
-              
+warp_in_progress=Warp is already in progress
+   
 [entity-name]
 warp-power=Warp capacitor
 warp-power-1=Warp capacitor
